<resources>
    <string name="app_name">Duzz Call</string>
    <string name="login">Login</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="password">Password</string>
    <string name="forgot_your_password">Forgot your Password?</string>
    <string name="new_user">New User?</string>
    <string name="register">Register</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hgh">Hello World!</string>
    <string name="welcome_to_duzzcall">Welcome to duzzcall !</string>
    <string name="terms_and_condition">Terms and Condition</string>
    <string name="agree_and_continue">Agree and Continue</string>
    <string name="verify_your_phone_number">Verify your phone number</string>
    <string name="tap_agree_and_continue">Tap “Agree and continue” to accept\nthe duzzcall Terms of Service and\nPrivacy Policy</string>
    <string name="duzzcall_will_send_an_sms_message">Duzzcall will send an SMS message\nto verify your phone number</string>
    <string name="select_the_country">Select the Country</string>
    <string name="enter_your_country">Enter your country and\nphone number</string>
    <string name="next">Next</string>
    <string name="verify_91_777_123_456">Verify +91 777 123 456</string>
    <string name="carrier_sms_charges_may_apply">Carrier SMS charges may apply</string>
    <string name="resend_sms_in_00_54_secs">Resend SMS in 00:54 secs</string>
    <string name="favourite">Favourite</string>
    <string name="history">History</string>
    <string name="contacts">Contacts</string>
    <string name="dial_pad">Dial Pad</string>
    <string name="setting">Settings</string>
    <string name="file_provider_authorities">com.logycraft.duzzcalll.fileprovider</string>


    <string name="asterisk">Asterisk</string>
    <string name="hashtag">Hashtag</string>
    <string name="call_number">Call number</string>
    <string name="two">Two</string>
    <string name="one">One</string>
    <string name="three">Three</string>
    <string name="four">Four</string>
    <string name="five">Five</string>
    <string name="six">Six</string>
    <string name="seven">Seven</string>
    <string name="eight">Eight</string>
    <string name="nine">Nine</string>
    <string name="zero">Zero</string>
    <string name="settings">Settings</string>
    <string name="jhon_doe">John Doe</string>
    <string name="account_settings">Account Settings</string>
    <string name="notification">Notification</string>
    <string name="security_notifications">Security notifications, change\nnumber</string>
    <string name="message_call_tones">Call tones</string>
    <string name="privacy">Privacy</string>
    <string name="blocked_contacts">Blocked contacts</string>
    <string name="storage_and_data">Storage and Data</string>
    <string name="network_usage">Network usage</string>
    <string name="app_language">App language</string>
    <string name="english">English</string>
    <string name="help_center_contact_us_privacy_policy">Help center, contact us, privacy policy</string>
    <string name="help">Help</string>
    <string name="search">Search</string>
    <string name="personal">Personal</string>
    <string name="business">Business</string>

    <string name="recent">Recent</string>
    <string name="all">All</string>
    <string name="missed">Missed</string>
    <string name="incoming_call_txt">Incoming call</string>
    <string name="missed_call_txt">Missed call</string>
    <string name="outgoing_call_txt">Outgoing call</string>

    <string name="password_validation_msg">The password must be at least 8 characters long and include a number, lowercase letter, uppercase letter and special character</string>
    <string name="enter_mobile_number">Enter mobile number</string>
    <string name="select_country">Select Country First</string>
    <string name="enter_password">Enter password</string>
    <string name="enter_firstname">Enter First Name</string>
    <string name="enter_lastname">Enter Last Name</string>
    <string name="enter_email_address">Enter email address</string>
    <string name="invalid_email_address">Invalid email address</string>
    <string name="favourited">Favorites</string>
    <string name="logout">Logout</string>
    <string name="to_complete_your_phone_number_nverification_please_enter_the_4_ndigit_activation_code">To complete your phone number\nverification, please enter the 4\ndigit activation code</string>
    <string name="resend_otp">Resend OTP</string>

    <string name="granted_permissions">Granted: %s</string>
    <string name="permanently_denied_permissions">Permanently denied: %s</string>
    <string name="permissions_required">Permissions required</string>
    <string name="rationale_permissions">Rationale: %s</string>
    <string name="request_again">Request again</string>
    <string name="action_settings">Settings</string>


    <string name="resend">Resend</string>
    <string name="notification_channel_id">linphone_notification_id</string>
    <string name="notification_reply_label">Reply</string>
    <string name="notification_mark_as_read_label">Mark as read</string>
    <string name="notification_replied_label">Sent reply: %s</string>
    <!--    <string name="incall_notif_incoming">Call incoming</string>-->
    <string name="incall_notif_incoming">Duzzcall Incoming Call</string>
    <string name="incall_notif_outgoing">Call outgoing</string>
    <string name="notification_call_answer_label">Answer</string>
    <string name="notification_call_hangup_label">Hangup </string>
    <string name="unread_messages">%i unread messages</string>
    <string name="notification_service_channel_id">linphone_notification_service_id</string>
    <string name="content_title_notification">Linphone instant messages notifications</string>
    <string name="content_title_notification_service">Linphone service notification</string>
    <string name="service_name">DuzzCall Service</string>
    <string name="missed_calls_notif_body">%i missed calls</string>
    <string name="missed_calls_notif_title">Missed call</string>
    <string name="incall_notif_paused">Paused call ongoing</string>
    <string name="linphone_sdk_version">4.4.35</string>
    <string name="linphone_sdk_branch">tags/4.4.35^0</string>
    <string name="user_agent">CALLJU</string>
    <string name="default_conference_factory_uri">sip:conference-factory@sip.linphone.org</string>
    <string name="default_lime_x3dh_server_url">https://lime.linphone.org/lime-server/lime-server.php</string>
    <string name="link_account_popup">Do you want to link the account %s with your phone number?</string>
    <string name="link">Link</string>
    <string name="maybe_later">Maybe later</string>
    <string name="default_domain">sip.linphone.org</string>
    <string name="tunnel_mode_entry_value_disabled">disabled</string>
    <string name="tunnel_mode_entry_value_3G_only">3G_only</string>
    <string name="tunnel_mode_entry_value_always">always</string>
    <string name="tunnel_mode_entry_value_auto">auto</string>
    <string name="today_date_format">HH:mm</string>
    <string name="content_description_accept">Accept</string>
    <string name="error_network_unreachable">Network is unreachable</string>
    <string name="error_call_declined">Call declined</string>
    <string name="add_contact">Add Contact</string>
    <string name="add_to_contacts">Add to Contacts</string>
    <string name="duzzcall_incoming_call">Duzzcall Incoming Call</string>
    <string name="hide">Hide</string>
    <string name="profile">Profile</string>
    <string name="phone_number">Phone Number</string>
    <string name="extension_number">Extension Number</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="update_email">Update Email</string>
    <string name="update_name">Update Name</string>
    <string name="update">Update</string>
    <string name="enter_your_mobile_number">Enter your mobile number</string>
    <string name="enter_your_country_and_nphone_number">Enter your country and\nphone number</string>
    <string name="update_portfolio">Update portfolio</string>
    <string name="contact_us">Contact Us</string>
    <string name="contact_number">Contact Number</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="privacy_policy">Privacy Policy</string>
</resources>