<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.SettingFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/topBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/d20">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="@dimen/d20"
            android:fontFamily="@font/poppins_bold"
            android:includeFontPadding="false"
            android:text="@string/settings"
            android:textColor="@color/appcolour"
            android:textSize="@dimen/dt22" />

    </androidx.appcompat.widget.Toolbar>

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@+id/topBar"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="@dimen/d20"
            android:orientation="vertical">

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/_d1"
                android:alpha="0.1"
                android:background="@color/black" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/d10"
                android:layout_marginTop="@dimen/d10"
                android:orientation="horizontal">

                <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
                    android:id="@+id/profile_image"
                    android:layout_width="@dimen/d50"
                    android:layout_height="@dimen/d50"
                    android:src="@color/appcolour" />

                <TextView
                    android:id="@+id/tv_profile_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="@dimen/d20"
                    android:fontFamily="@font/poppins_bold"
                    android:text="@string/jhon_doe"
                    android:textColor="@color/black"
                    android:textSize="@dimen/dt17" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/_d1"
                android:layout_marginTop="@dimen/d10"
                android:alpha="0.1"
                android:background="@color/black" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/d10"
                android:layout_marginTop="@dimen/d40"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="@dimen/d20"
                    android:layout_height="@dimen/d20"
                    android:layout_marginTop="@dimen/d5"
                    android:src="@drawable/ic_key" />

                <LinearLayout
                    android:id="@+id/lin_accountsetting"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/d10"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins_medium"
                        android:includeFontPadding="false"
                        android:text="@string/account_settings"
                        android:textColor="@color/text_color_gray"
                        android:textSize="@dimen/dt17" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins_light"
                        android:includeFontPadding="false"
                        android:text="@string/update_portfolio"
                        android:textColor="@color/text_color_gray"
                        android:textSize="@dimen/dt14" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/d10"
                android:layout_marginTop="@dimen/d15"
                android:orientation="horizontal"
                android:visibility="gone">

                <ImageView
                    android:layout_width="@dimen/d20"
                    android:layout_height="@dimen/d20"
                    android:layout_marginTop="@dimen/d5"
                    android:src="@drawable/ic_notification" />

                <LinearLayout

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/d10"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins_medium"
                        android:includeFontPadding="false"
                        android:text="@string/notification"
                        android:textColor="@color/text_color_gray"
                        android:textSize="@dimen/dt17" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins_light"
                        android:includeFontPadding="false"
                        android:text="@string/message_call_tones"
                        android:textColor="@color/text_color_gray"
                        android:textSize="@dimen/dt14" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/d10"
                android:layout_marginTop="@dimen/d15"
                android:orientation="horizontal"
                android:visibility="gone">

                <ImageView
                    android:layout_width="@dimen/d20"
                    android:layout_height="@dimen/d20"
                    android:layout_marginTop="@dimen/d5"
                    android:src="@drawable/ic_privacy" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/d10"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins_medium"
                        android:includeFontPadding="false"
                        android:text="@string/privacy"
                        android:textColor="@color/text_color_gray"
                        android:textSize="@dimen/dt17" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins_light"
                        android:includeFontPadding="false"
                        android:text="@string/blocked_contacts"
                        android:textColor="@color/text_color_gray"
                        android:textSize="@dimen/dt14" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/d10"
                android:layout_marginTop="@dimen/d15"
                android:orientation="horizontal"
                android:visibility="gone">

                <ImageView
                    android:layout_width="@dimen/d20"
                    android:layout_height="@dimen/d20"
                    android:layout_marginTop="@dimen/d5"
                    android:src="@drawable/ic_storage" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/d10"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins_medium"
                        android:includeFontPadding="false"
                        android:text="@string/storage_and_data"
                        android:textColor="@color/text_color_gray"
                        android:textSize="@dimen/dt17" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins_light"
                        android:includeFontPadding="false"
                        android:text="@string/network_usage"
                        android:textColor="@color/text_color_gray"
                        android:textSize="@dimen/dt14" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/d10"
                android:layout_marginTop="@dimen/d15"
                android:orientation="horizontal"
                android:visibility="gone">

                <ImageView
                    android:layout_width="@dimen/d20"
                    android:layout_height="@dimen/d20"
                    android:layout_marginTop="@dimen/d5"
                    android:src="@drawable/ic_language" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/d10"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins_medium"
                        android:includeFontPadding="false"
                        android:text="@string/app_language"
                        android:textColor="@color/text_color_gray"
                        android:textSize="@dimen/dt17" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins_light"
                        android:includeFontPadding="false"
                        android:text="@string/english"
                        android:textColor="@color/text_color_gray"
                        android:textSize="@dimen/dt14" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/linear_help"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/d10"
                android:layout_marginTop="@dimen/d15"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="@dimen/d20"
                    android:layout_height="@dimen/d20"
                    android:layout_marginTop="@dimen/d5"
                    android:src="@drawable/ic_help" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/d10"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins_medium"
                        android:includeFontPadding="false"
                        android:text="@string/help"
                        android:textColor="@color/text_color_gray"
                        android:textSize="@dimen/dt17" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins_light"
                        android:includeFontPadding="false"
                        android:text="@string/help_center_contact_us_privacy_policy"
                        android:textColor="@color/text_color_gray"
                        android:textSize="@dimen/dt14" />

                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_logout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/d10"
                android:layout_marginTop="@dimen/d15"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="@dimen/d20"
                    android:layout_height="@dimen/d20"
                    android:layout_gravity="center"
                    android:src="@drawable/logout"
                    app:tint="@color/red" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/d5"
                    android:fontFamily="@font/poppins_medium"
                    android:includeFontPadding="false"
                    android:padding="@dimen/d5"
                    android:layout_marginRight="@dimen/d20"
                    android:text="@string/logout"
                    android:textColor="@color/red"
                    android:textSize="@dimen/dt17" />

            </LinearLayout>


        </LinearLayout>
    </ScrollView>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="@dimen/d30"
        android:layout_marginTop="@dimen/d40"
        android:layout_above="@+id/tv_version"
        android:layout_marginBottom="@dimen/d10"
        android:src="@drawable/titlename"></ImageView>

    <TextView
        android:id="@+id/tv_version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/d40"
        android:fontFamily="@font/poppins_light"
        android:text="Version 1.5.0"
        android:textSize="@dimen/dt13" />


</RelativeLayout>